--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<md-grid-list cols="3">
+<md-grid-list cols="3" rowHeight="200px">
 
     <md-grid-tile>
-
         <md-list>
-
             <md-list-item>
                 <form (ngSubmit)=addEarnings()>
                     <input name="name" md-line type="text" [(ngModel)]="earningsName">
@@ -11,6 +9,31 @@
                     <button type="submit" md-line>add</button>
                 </form>
             </md-list-item>
+        </md-list>
+    </md-grid-tile>
+
+    <md-grid-tile>
+        <md-list>
+            <md-list-item>
+                <form (ngSubmit)=addCosts()>
+                    <input name="name" md-line type="text" [(ngModel)]="costsName">
+                    <input name="value" md-line type="number" [(ngModel)]="costsValue">
+                    <button type="submit" md-line>add</button>
+                </form>
+            </md-list-item>
+        </md-list>
+    </md-grid-tile>
+
+
+
+</md-grid-list>
+<md-grid-list cols="3">
+
+    <md-grid-tile>
+
+        <md-list>
+
+
 
             <md-list-item>
                 {{earnings}}
@@ -19,6 +42,7 @@
             <md-list-item *ngFor="let earnings of earningsData">
                 <div md-line>{{earnings.name}}</div>
                 <div md-line>{{earnings.value}}</div>
+                <div md-line>{{earnings.date}}</div>
             </md-list-item>
 
         </md-list>
@@ -29,13 +53,7 @@
 
         <md-list>
 
-            <md-list-item>
-                <form (ngSubmit)=addCosts()>
-                    <input name="name" md-line type="text" [(ngModel)]="costsName">
-                    <input name="value" md-line type="number" [(ngModel)]="costsValue">
-                    <button type="submit" md-line>add</button>
-                </form>
-            </md-list-item>
+
 
             <md-list-item>
                 {{costs}}
@@ -44,6 +62,7 @@
             <md-list-item *ngFor="let costs of costsData">
                 <div md-line>{{costs.name}}</div>
                 <div md-line>{{costs.value}}</div>
+                <div md-line>{{costs.date}}</div>
             </md-list-item>
 
         </md-list>
