--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
                     <i class="material-icons left">arrow_downward</i>
-                    <span style="margin-right: 15px;">{{incomeSum}}</span>
+                    <span style="margin-right: 15px;">{{incomeGross}}</span>
                 </li>
                 <li>
                     <i class="material-icons left">arrow_upward</i>
-                    <span style="margin-right: 15px;">{{lossSum}}</span>
+                    <span style="margin-right: 15px;">{{lossSGross}}</span>
                 </li>
                 <li>
                     <i class="material-icons left">drag_handle</i>
