--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,15 +22,15 @@
 <div class="container" style="margin: 30px auto 0;">
     <div class="row">
         <div class="col s6">
-            <form class="row" (ngSubmit)=addIncome()>
+            <form class="row" (ngSubmit)="add('income', transIncome)">
                 <div class="input-field col s5">
                     <input class="validate" id="incomeName" name="incomeName" type="text"
-                          [(ngModel)]="incomeName">
+                           [(ngModel)]="transIncome.name">
                     <label for="incomeName">Name</label>
                 </div>
                 <div class="input-field col s5">
                     <input class="validate" id="incomeValue" name="value" type="number"
-                           [(ngModel)]="incomeValue">
+                           [(ngModel)]="transIncome.value">
                     <label for="incomeValue">Value</label>
                 </div>
                 <div class="input-field col s2">
@@ -46,13 +46,13 @@
             </div>
         </div>
         <div class="col s6">
-            <form class="row" (ngSubmit)=addLoss()>
+            <form class="row" (ngSubmit)="add('loss', transLoss)">
                 <div class="input-field col s5">
-                    <input class="validate" id="lossName" name="name" type="text" [(ngModel)]="lossName">
+                    <input class="validate" id="lossName" name="name" type="text" [(ngModel)]="transLoss.name">
                     <label for="lossName">Name</label>
                 </div>
                 <div class="input-field col s5">
-                    <input class="validate" id="lossValue" name="value" type="number" [(ngModel)]="lossValue">
+                    <input class="validate" id="lossValue" name="value" type="number" [(ngModel)]="transLoss.value">
                     <label for="lossValue">Value</label>
                 </div>
                 <div class="input-field col s2">
