--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="navbar-fixed">
     <nav>
         <div class="nav-wrapper container">
-            <a href="#" class="brand-logo">Balance</a>
+            <a class="brand-logo" routerLink="/" routerLinkActive="active">Balance</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
                     <i class="material-icons left">arrow_downward</i>
@@ -20,5 +20,6 @@
         </div>
     </nav>
 </header>
+<router-outlet></router-outlet>
 
-<app-main></app-main>
+
