--- a/src/app/category-item/category-item.component.html
+++ b/src/app/category-item/category-item.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <div class="row">
-        {{category}}
+    <div  class="row">
+        <div *ngFor="let i of item">
+            {{i.name}}
+        </div>
     </div>
 </div>
