--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -3,6 +3,7 @@
         <div class="nav-wrapper container">
             <a class="brand-logo" routerLink="/" routerLinkActive="active">Balance</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li> <a  routerLink="cat" routerLinkActive="active">cat</a></li>
                 <li>
                     <i class="material-icons left">arrow_downward</i>
                     <span  style="margin-right: 15px;">{{incomeGross}}</span>
