--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <ul>
             <li *ngFor="let cat of categories">
-                <a [routerLink]="['/cat', cat.id]">{{cat.name}}</a>
+                <a [routerLink]="['/cat', cat.name]">{{cat.name}}</a>
             </li>
         </ul>
     </div>
