--- a/src/app/home/main.component.html
+++ b/src/app/home/main.component.html
@@ -1,33 +1,48 @@
 <div class="container" style="margin: 30px auto 0;">
   <div class="row">
     <div class="col s6">
-      <form class="row" (ngSubmit)="add('income', transIncome)">
+      <form class="row"  (ngSubmit)="add('income', transIncome); addIncome.reset()" #addIncome="ngForm">
+
         <div class="input-field col s5">
-          <input type="text"  name="date" value={{date}} [(ngModel)]="transIncome.date">
+          <input type="text"  class="validate" id="inomeDate"
+                 required
+                 name="date"  [(ngModel)]="transIncome.date">
+          <label for="inomeDate">date</label>
         </div>
+
         <div class="input-field col s5">
-          <input class="validate" id="incomeName" name="incomeName" type="text"
+          <input type="text" class="validate" id="incomeName"
+                 required
+                 name="incomeName"
                  [(ngModel)]="transIncome.name">
           <label for="incomeName">Name</label>
         </div>
+
         <div class="input-field col s5">
-          <input class="validate" id="incomeValue" name="value" type="number"
+          <input type="number" class="validate" id="incomeValue"
+                 required
+                 name="value"
                  [(ngModel)]="transIncome.value">
           <label for="incomeValue">Value</label>
         </div>
+
         <div class="input-field col s10">
-          <select class="browser-default" name="category" [(ngModel)]="transIncome.category">
-            <option value="" disabled selected>Choose category</option>
-            <option *ngFor="let category of categories"
-                    value="{{category.name}}">{{category.name}}
-            </option>
-          </select>
+          <div *ngFor="let category of categories">
+            <input type="radio" id="{{category.name}}"
+                   required
+                   name="category"
+                   value="{{category.name}}"
+                   [(ngModel)]="transIncome.category">
+            <label for="{{category.name}}">{{category.name}}</label>
+          </div>
         </div>
+
         <div class="input-field col s2">
-          <button class="btn-floating btn-large waves-effect waves-light" type="submit" >
+          <button class="btn-floating btn-large waves-effect waves-light" type="submit"  [disabled]="!addIncome.form.valid">
             <i class="material-icons">add</i>
           </button>
         </div>
+
       </form>
       <div class="card item item--income" *ngFor="let income of incomeData">
         <div class="item_name">{{income.name}}</div>
@@ -36,21 +51,48 @@
         <a [routerLink]="['/cat', income.category]">{{income.category}}</a>
       </div>
     </div>
+
     <div class="col s6">
-      <form class="row" (ngSubmit)="add('loss', transLoss)">
+      <form class="row" (ngSubmit)="add('loss', transLoss); addLoss.reset()" #addLoss="ngForm">
+
         <div class="input-field col s5">
-          <input class="validate" id="lossName" name="name" type="text" [(ngModel)]="transLoss.name">
+          <input type="text"  class="validate" id="lossDate"
+                 required
+                 name="date" [(ngModel)]="transLoss.date">
+          <label for="lossDate">date</label>
+        </div>
+
+        <div class="input-field col s5">
+          <input type="text" class="validate" id="lossName"
+                 required
+                 name="name" [(ngModel)]="transLoss.name">
           <label for="lossName">Name</label>
         </div>
+
         <div class="input-field col s5">
-          <input class="validate" id="lossValue" name="value" type="number" [(ngModel)]="transLoss.value">
+          <input type="number" class="validate" id="lossValue"
+                 required
+                 name="value" [(ngModel)]="transLoss.value">
           <label for="lossValue">Value</label>
         </div>
+
+        <div class="input-field col s10">
+          <div *ngFor="let category of categories">
+            <input type="radio" id="{{category.name}}"
+                   required
+                   name="category"
+                   value="{{category.name}}"
+                   [(ngModel)]="transLoss.category">
+            <label for="{{category.name}}">{{category.name}}</label>
+          </div>
+        </div>
+
         <div class="input-field col s2">
-          <button class="btn-floating btn-large waves-effect waves-light red" type="submit" >
+          <button class="btn-floating btn-large waves-effect waves-light red" type="submit" [disabled]="!addLoss.form.valid">
             <i class="material-icons">add</i>
           </button>
         </div>
+
       </form>
       <div class="card item item--loss" *ngFor="let loss of lossData">
         <div class="item_name">{{loss.name}}</div>
@@ -61,3 +103,5 @@
     </div>
   </div>
 </div>
+
+
