--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <ul>
-            <li *ngFor="let cat of categories">
-                <a [routerLink]="['/cat', cat.name]">{{cat.name}}</a>
+            <li *ngFor="let category of categories">
+                <a [routerLink]="['/cat', category.name]">{{category.name}}</a>
             </li>
         </ul>
     </div>
