--- a/src/app/category-item/category-item.component.html
+++ b/src/app/category-item/category-item.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div  class="row">
-        <div *ngFor="let i of item">
-            {{i.name}}
+        <div *ngFor="let item of items">
+            {{item.name}}
         </div>
     </div>
 </div>
